# vibevm

./: .gitattributes  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTINUE.md  Cargo.toml  DEV-GUIDE.md  README.md  ROADMAP.md  RUNTIME-GUIDE.md  TASKS.md  VIBEVM-SPEC.md  conform-baseline.json  specmap-ratchet.json  specmap.json
.cargo/: config.toml
crates/vibe-check/: Cargo.toml
crates/vibe-cli/: Cargo.toml
crates/vibe-core/: Cargo.toml
crates/vibe-graph/: Cargo.toml
crates/vibe-graph/src/: lib.rs
crates/vibe-install/: Cargo.toml
crates/vibe-install/src/: apply.rs  error.rs  events.rs  fetched.rs  lib.rs  plan.rs  record.rs
crates/vibe-install/tests/: recording_behaviour.rs
crates/vibe-llm/: Cargo.toml
crates/vibe-llm/src/: lib.rs
crates/vibe-mcp/: Cargo.toml
crates/vibe-publish/: Cargo.toml
crates/vibe-registry/: Cargo.toml
crates/vibe-resolver/: Cargo.toml
crates/vibe-wire/: Cargo.toml
crates/vibe-wire/src/: lib.rs
crates/vibe-workspace/: Cargo.toml
docs/: README.md  architecture.md  authoring-feat.md  authoring-flow.md  authoring-stack.md  git-source-dependencies.md  glossary.md  lockfile-format.md  registry-auth.md  registry-redirect.md  troubleshooting.md  version-syntax.md
docs/commands/: check.md  install.md  list.md  mcp-install.md  mcp-serve.md  mcp-status.md  mcp-uninstall.md  mcp-upgrade.md  registry-add.md  registry-publish.md  registry-redirect-update.md  registry-redirect.md  registry-remove.md  registry-set-mirror.md  registry-test.md  registry-vendor.md  search.md  show.md  uninstall.md  update.md  workspace-publish.md
docs/guides/: agent-mcp-quickstart-opencode.md
manual-tests/: M1.1-git-registry-smoke.md  M1.15-git-source-smoke.md  M1.16-redirect-smoke.md  M1.17-workspace-publish-smoke.md  M1.5-gate-v2-per-package-smoke.md  M1.6-mirror-vendor-smoke.md  M2.10-index-smoke.md  README.md
schemas/: init_report.jtd.json  install_plan.jtd.json  install_report.jtd.json  list_report.jtd.json  registry_publish_report.jtd.json  registry_sync_report.jtd.json  specmap.jtd.json  uninstall_report.jtd.json
services/vibe-index/: Cargo.toml
spec/: WAL.md
spec/boot/: 90-user.md  INDEX.md
spec/common/: PROP-000.md  PROP-013-periodic-health-audit.md  PROP-016-source-mirrors.md  PROP-018-agentic-standalone-modes.md  PROP-019-version-manager.md
spec/design/: README.md  loading-and-boot-model.md  workspace-and-qualified-naming.md
spec/discipline/: README.md
spec/modules/: README.md
spec/neworder/: README.md
spec/research/: PROP-004-tessl-comparative-research.md
spec/terraforms/: CONVERT-PLAN-v0.1.md  DISCIPLINE-SWEEP-v0.1.md  SHRINK-PLAN-v0.1.md  SHRINK-PLAN-v0.2.md
terraform/: LOG.md
terraform/adopt-v0.3/: LOG.md  PREDICTIONS.md
terraform/discipline-sweep/: REPORT-2026-06-17-grammar-refactor.md
tools/: .gitignore  self-check.sh
xtask/: Cargo.toml
xtask/src/: main.rs  (+9 more)
(+275 files in other folders)
