[package]
name = "vibe-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Install, uninstall, and update flows for vibevm packages"

[dependencies]
vibe-core.workspace = true
vibe-registry.workspace = true
vibe-resolver.workspace = true
vibe-graph.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dialoguer.workspace = true
console.workspace = true
walkdir.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
semver.workspace = true
