[package]
name = "vibe-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generated Rust types for vibevm wire contracts (JTD-driven, see PROP-000 §16)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
